@@ -11,6 +11,7 @@ aTunes 3.0.8
 ------------
 - FIX: Control visible context panels
 - FIX: Improvements in process to delete files
+- FIX: Workaround for mplayer problem with long filenames or including non-english chars
 
 aTunes 3.0.7
 ------------
